modules/virtual_machine/main.tf
resource "azurerm_network_interface" "vm_nic" {
  name                = "${var.vm_name}-nic"
  location            = var.location
  tags                = var.tags
  resource_group_name = var.resource_group_name

  ip_configuration {
    name                          = "internal"
    subnet_id                     = azurerm_subnet.subnet.id
    private_ip_address_allocation = "Dynamic"
    public_ip_address_id          = azurerm_public_ip.vm_public_ip.id
  }
}

resource "azurerm_virtual_network" "vnet" {
  name                = "${var.vm_name}-vnet"
  address_space       = ["10.0.0.0/16"]
  tags                = var.tags
  location            = var.location
  resource_group_name = var.resource_group_name
}

resource "azurerm_subnet" "subnet" {
  name                 = "default"
  resource_group_name  = var.resource_group_name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.2.0/24"]
}

resource "azurerm_public_ip" "vm_public_ip" {
  name                = "${var.vm_name}-ip"
  location            = var.location
  tags                = var.tags
  resource_group_name = var.resource_group_name
  allocation_method   = "Static"  # Use Static allocation
  sku                 = "Standard"  # Specify the SKU as Standard
}

resource "azurerm_network_security_group" "nsg" {
  name                = "${var.vm_name}-nsg"
  tags                = var.tags
  location            = var.location
  
  resource_group_name = var.resource_group_name

  security_rule {
    name                       = "allow_ssh"
    priority                   = 1001
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "firewallapp"
    priority                   = 200
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "ui"
    priority                   = 201
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "8080"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "service"
    priority                   = 202
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5002"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
  security_rule {
    name                       = "dbport"
    priority                   = 203
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "5432"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }
}

resource "azurerm_network_interface_security_group_association" "nic_nsg" {
  network_interface_id      = azurerm_network_interface.vm_nic.id
  network_security_group_id = azurerm_network_security_group.nsg.id
}

resource "azurerm_linux_virtual_machine" "vm" {
  name                                  = var.vm_name
  resource_group_name                   = var.resource_group_name
  location                              = var.location
  size                                  = var.vm_size
  admin_username                        = var.admin_username
  tags                = var.tags
  admin_password                        = var.admin_password
  disable_password_authentication       = false  # Ensure this is set to false
  # tags = merge(
  #   var.tags,
  #   { CreationTime = "${timestamp()}" }
  # )  
  
  network_interface_ids                 = [azurerm_network_interface.vm_nic.id]

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "Canonical"
    offer     = "0001-com-ubuntu-server-jammy"
    sku       = "22_04-lts"
    version   = "latest"
  }
}

resource "null_resource" "addfiles" {
  provisioner "file" {
    source      = "startup.sh"
    destination = "/home/azureuser/startup.sh"

    connection {
      type     = "ssh"
      user     = var.admin_username
      password = var.admin_password
      host     = azurerm_public_ip.vm_public_ip.ip_address
    }
  }

  depends_on = [
    azurerm_linux_virtual_machine.vm
  ]
}

resource "null_resource" "exec" {
  provisioner "remote-exec" {
    connection {
      type     = "ssh"
      user     = var.admin_username
      password = var.admin_password
      host     = azurerm_public_ip.vm_public_ip.ip_address
    }

    inline = [
      "sudo apt-get update -y",
      "sudo apt-get install dos2unix -y",                  # Install dos2unix if not present
      "sudo dos2unix /home/azureuser/startup.sh",          # Convert startup.sh to Unix format
      "sudo chmod +x /home/azureuser/startup.sh",          # Make the script executable
      "sudo /home/azureuser/startup.sh"                    # Execute the script
    ]
  }

  depends_on = [
    azurerm_linux_virtual_machine.vm,
    null_resource.addfiles
  ]
}

output "vm_public_ip" {
  value = azurerm_public_ip.vm_public_ip.ip_address
}
